--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
+attrs==21.4.0
+iniconfig==1.1.1
+json-rpc==1.13.0
+packaging==21.3
 paho-mqtt==1.6.1
+pluggy==1.0.0
+py==1.11.0
+pyparsing==3.0.6
+pytest==6.2.5
+toml==0.10.2
+Werkzeug==2.0.2
