--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
 attrs==21.4.0
+black==22.1.0
+click==8.0.3
 iniconfig==1.1.1
 json-rpc==1.13.0
+mypy-extensions==0.4.3
 packaging==21.3
 paho-mqtt==1.6.1
+pathspec==0.9.0
+platformdirs==2.4.1
 pluggy==1.0.0
 py==1.11.0
 pyparsing==3.0.6
+pyrsistent==0.18.1
 pytest==6.2.5
 toml==0.10.2
+tomli==2.0.0
+typing_extensions==4.0.1
 Werkzeug==2.0.2
